--- a/templates/news.html
+++ b/templates/news.html
@@ -492,9 +492,20 @@
 </header>
 <ul aria-labelledby="group-heading-946" class="list">
 <li class="term-river-grid__wrapper___fTw9V with-image" role="list-item"> <figure class="term-river-grid__figure___11iky">
-<a class="term-river-grid__thumbnail___k0oqa" href="https://www.sciencenews.org/article/alaska-yukon-delta-visualization-climate-change-land-transition">
-<img alt="visualization of Alaska’s Yukon Delta" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat-1030x580.jpg 1030w, https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat-1380x776.jpg 1380w, https://www.sciencenews.org/wp-content/uploads/2021/07/072021_eg_alaska-delta_feat.jpg 1440w" width="330"/> </a>
+<a class="term-river-grid__thumbnail___k0oqa" href="https://www.sciencenews.org/article/climate-change-un-ipcc-report-humans">
+<img alt="people riding in a backhoe amid flooding in China" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat-1030x580.jpg 1030w, https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat-1380x776.jpg 1380w, https://www.sciencenews.org/wp-content/uploads/2021/08/080921_cg_IPCC_feat.jpg 1440w" width="330"/> </a>
 </figure>
+<div class="content">
+<!-- The post title -->
+<h3 class="term-river-grid__title___2Gm-_">
+<a href="https://www.sciencenews.org/article/climate-change-un-ipcc-report-humans">
+				The new UN climate change report shows there’s no time for denial or delay			</a>
+</h3>
+<div class="term-river-grid__meta___BARqt">
+				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/carolyn-gramling">Carolyn Gramling</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-08-09T18:47:01-04:00">11 hours ago</time> </div>
+</div>
+</li>
+<li class="term-river-grid__wrapper___fTw9V no-image" role="list-item">
 <div class="content">
 <!-- The post title -->
 <h3 class="term-river-grid__title___2Gm-_">
@@ -514,17 +525,6 @@
 </h3>
 <div class="term-river-grid__meta___BARqt">
 				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/carolyn-gramling">Carolyn Gramling</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-07-13T11:02:11-04:00">July 13, 2021</time> </div>
-</div>
-</li>
-<li class="term-river-grid__wrapper___fTw9V no-image" role="list-item">
-<div class="content">
-<!-- The post title -->
-<h3 class="term-river-grid__title___2Gm-_">
-<a href="https://www.sciencenews.org/article/planting-trees-protect-forests-climate-change">
-				The first step in using trees to slow climate change: Protect the trees we have			</a>
-</h3>
-<div class="term-river-grid__meta___BARqt">
-				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/susan-milius">Susan Milius</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-07-13T06:00:00-04:00">July 13, 2021</time> </div>
 </div>
 </li> </ul>
 </div><div class="term-river-grid__group___2d4hS">
@@ -580,9 +580,20 @@
 </header>
 <ul aria-labelledby="group-heading-930" class="list">
 <li class="term-river-grid__wrapper___fTw9V with-image" role="list-item"> <figure class="term-river-grid__figure___11iky">
-<a class="term-river-grid__thumbnail___k0oqa" href="https://www.sciencenews.org/article/black-hole-magnetic-field-hair-computer-simulations-physics">
-<img alt="simulation of a black hole's magnetic field" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/08/072921_EC_black-hole-hair_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/08/072921_EC_black-hole-hair_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/08/072921_EC_black-hole-hair_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/08/072921_EC_black-hole-hair_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/08/072921_EC_black-hole-hair_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/08/072921_EC_black-hole-hair_feat.jpg 1030w" width="330"/> </a>
+<a class="term-river-grid__thumbnail___k0oqa" href="https://www.sciencenews.org/article/gravitational-wave-ligo-virgo-new-signals-ripples-spacetime">
+<img alt="illustration of gravitational waves forming around two black holes spiraling around one another" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/08/080321_ec_gravitational-waves_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/08/080321_ec_gravitational-waves_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_ec_gravitational-waves_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_ec_gravitational-waves_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_ec_gravitational-waves_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_ec_gravitational-waves_feat.jpg 1030w" width="330"/> </a>
 </figure>
+<div class="content">
+<!-- The post title -->
+<h3 class="term-river-grid__title___2Gm-_">
+<a href="https://www.sciencenews.org/article/gravitational-wave-ligo-virgo-new-signals-ripples-spacetime">
+				A bounty of potential gravitational wave events hints at exciting possibilities			</a>
+</h3>
+<div class="term-river-grid__meta___BARqt">
+				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/emily-conover">Emily Conover</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-08-04T10:16:35-04:00">August 4, 2021</time> </div>
+</div>
+</li>
+<li class="term-river-grid__wrapper___fTw9V no-image" role="list-item">
 <div class="content">
 <!-- The post title -->
 <h3 class="term-river-grid__title___2Gm-_">
@@ -602,17 +613,6 @@
 </h3>
 <div class="term-river-grid__meta___BARqt">
 				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/tom-siegfried">Tom Siegfried</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-07-24T21:17:50-04:00">July 24, 2021</time> </div>
-</div>
-</li>
-<li class="term-river-grid__wrapper___fTw9V no-image" role="list-item">
-<div class="content">
-<!-- The post title -->
-<h3 class="term-river-grid__title___2Gm-_">
-<a href="https://www.sciencenews.org/article/atomic-clock-deep-space-travel-nasa-passed-first-test">
-				An atomic clock that could revolutionize space travel just passed its first test			</a>
-</h3>
-<div class="term-river-grid__meta___BARqt">
-				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/maria-temming">Maria Temming</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-06-30T11:00:00-04:00">June 30, 2021</time> </div>
 </div>
 </li> </ul>
 </div><div class="term-river-grid__group___2d4hS">
