--- a/templates/iitchemical.html
+++ b/templates/iitchemical.html
@@ -3600,10 +3600,10 @@ h2 a {
                                                     <td>NA</td>
                                                     
                                                     
-                                                    <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                                    <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                                     
                                                     
-                                                    <a href="" target="_blank">Publication</a><p></p></div></td></tr>
+                                                    <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                                     <tr><td>Amiya Kumar Jana</td>
                                                     
                                                     
@@ -3728,10 +3728,10 @@ h2 a {
                                                     <td>NA</td>
                                                     
                                                     
-                                                    <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                                    <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                                     
                                                     
-                                                    <a href="" target="_blank">Publication</a><p></p></div></td></tr>
+                                                    <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                                     <tr><td>Jayanta Chakraborty</td>
                                                     
                                                     
@@ -3902,7 +3902,7 @@ h2 a {
                                                     <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="https://youtu.be/Zj-k7SAL4PA" target="_blank">Profile</a>
                                                     
                                                     
-                                                    <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                                    <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                                     <tr><td>Sirshendu De</td>
                                                     
                                                     
@@ -4155,7 +4155,7 @@ h2 a {
                                                         <td>NA</td>
                                                         
                                                         
-                                                        <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                                        <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                                         
                                                         
                                                         <a href="" target="_blank">Publication</a><p></p></div></td></tr>
@@ -4283,10 +4283,10 @@ h2 a {
                                                         <td>NA</td>
                                                         
                                                         
-                                                        <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                                        <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                                         
                                                         
-                                                        <a href="" target="_blank">Publication</a><p></p></div></td></tr>
+                                                        <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                                         <tr><td>Jayanta Chakraborty</td>
                                                         
                                                         
@@ -4457,7 +4457,7 @@ h2 a {
                                                         <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="https://youtu.be/Zj-k7SAL4PA" target="_blank">Profile</a>
                                                         
                                                         
-                                                        <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                                        <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                                         <tr><td>Sirshendu De</td>
                                                         
                                                         
