--- a/templates/research.html
+++ b/templates/research.html
@@ -7,7 +7,7 @@
 <body>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="professor.html">Professor</a>
+    <a href="branches.html">Branches</a>
     <a href="home.html">Home</a>
     <a href="research.html">Research</a>
     <a href="aboutus.html">AboutUs</a>
