--- a/templates/branches.html
+++ b/templates/branches.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/static/css/professors.css">
+  <link rel="stylesheet" href="/static/css/ranches.css">
 </head>
 
 <body>
 
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="professor.html">Professor</a>
+    <a href="branches.html">Branches/a>
     <a href="home.html">Home</a>
     <a href="research.html">Research</a>
     <a href="aboutus.html">AboutUs</a>
