--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -2,16 +2,37 @@
 <html lang="en">
 <head>
     <title>
-      CSE
+      CSE | Manuscript
     </title>
 	<!-- Side Navigation Menu V2, RWD
 	===================
 	Author: https://github.com/pablorgarcia -->
- <link rel="stylesheet" href="/static/css/csestatic.css">
+ <link rel="stylesheet" href="/static/css/professorlist.css">
+ <script>
+  function openNav() {
+    document.getElementById("mySidebar").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+  }
+  
+  function closeNav() {
+    document.getElementById("mySidebar").style.width = "0";
+    document.getElementById("main").style.marginLeft= "0";
+  }
+  </script>
 </head>
 <body>
-    <h1><span class="blue"></span> <span class="yellow">Professor List (Alphabetical)</pan></h1>
-        <h2> Fields related to Computer Science and engineering</h2>
+  <div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="branches.html">Professor</a>
+    <a href="home.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="aboutus.html">AboutUs</a>
+    <a href="news.html">News</a>
+  </div>
+  <div id="main">
+    <button class="openbtn" onclick="openNav()">☰</button>
+  </div>
+        <h1 style="color: gold; font-size:xx-large;">Professor List (IITs)<br>Computer Science and engineering</h1>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
         <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in Professor Name">
