--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Manuscript</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -9,7 +9,7 @@
 <body class="w3-light-grey">
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="professor.html">Professor</a>
+        <a href="branches.html">Branches</a>
         <a href="home.html">Home</a>
         <a href="research.html">Research</a>
         <a href="aboutus.html">AboutUs</a>
