--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -3,24 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/static/css/aboutus.css">
-</head>
-<body>
-
-  <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="branches.html">Branches</a>
-    <a href="home.html">Home</a>
-    <a href="research.html">Research</a>
-    <a href="aboutus.html">AboutUs</a>
-  </div>
-  
-  <div id="main">
-    <button class="openbtn" onclick="openNav()">☰</button>  
-    <h2>Home Feed</h2>
-    <p>Welcome to Reseachers</p>
-  </div>
-  
-  <script>
+<script>
   function openNav() {
     document.getElementById("mySidebar").style.width = "250px";
     document.getElementById("main").style.marginLeft = "250px";
@@ -31,12 +14,25 @@
     document.getElementById("main").style.marginLeft= "0";
   }
   </script>
-   <div class="about-section">
-        <h1>About Us Page</h1>
-        <p>Some text about who we are and what we do.</p>
+</head>
+<body style="background-color: #1c1d1d;">
+  <div class="about-section">
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <a href="branches.html">Branches</a>
+      <a href="home.html">Home</a>
+      <a href="research.html">Research</a>
+      <a href="aboutus.html">About Us</a>
+      <a href="news.html">News</a>
+    </div>
+    <div id="main">
+      <button class="openbtn" onclick="openNav()" style="position: absolute; top: 10px; left: 10px;">☰</button>
+    </div>
+    <h1>About the Team</h1>
+      <p>We're just some B.Tech Graduates</p>
       </div>
       
-      <h2 style="text-align:center">Our Team</h2>
+      <h2 style="text-align:center; color: aliceblue;">Our Team</h2>
       <div class="row">
         <div class="column">
           <div class="card">
@@ -46,7 +42,7 @@
               <p class="title">Back-End Devloper</p>
               <p>I made the about us section</p>
               <p>adityaarchie1234@gmail.com</p>
-              <p><button class="button">Contact</button></p>
+              <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
             </div>
           </div>
         </div>
@@ -59,7 +55,7 @@
               <p class="title">Front End Devloper</p>
               <p>Gadhi</p>
               <p>nandinisingh1803@gmail.com</p>
-              <p><button class="button">Contact</button></p>
+              <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
             </div>
           </div>
         </div>
@@ -72,7 +68,7 @@
               <p class="title">Designer</p>
               <p>Paper deta ha bas</p>
               <p>john@example.com</p>
-              <p><button class="button">Contact</button></p>
+              <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
             </div>
           </div>
         </div>
@@ -85,7 +81,7 @@
             <p class="title">JS</p>
             <p>PEE pEE poo</p>
             <p>pius@example.com</p>
-            <p><button class="button">Contact</button></p>
+            <p><a href="mailto:piyush.chandra2013@gmail.com" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
           </div>
         </div>
       </div>
@@ -102,6 +98,7 @@
           </div>
         </div>
       </div>
-    </div>      
+    </div>    
+      
 </body>
 </html>
