--- a/templates/nitcse.html
+++ b/templates/nitcse.html
@@ -9,10 +9,10 @@
 <body>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="branches.html">branches</a>
+    <a href="branches.html">Branches</a>
     <a href="home.html">Home</a>
     <a href="research.html">Research</a>
-    <a href="aboutus.html">AboutUs</a>
+    <a href="aboutus.html">About Us</a>
     <a href="news.html">News</a>
   </div>
   
