--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/static/css/aboutus.css">
+<link rel="stylesheet" href="/static/css/footer.css">
+<link rel="stylesheet" href="/static/css/sidebar.css">
 <script>
   function openNav() {
     document.getElementById("mySidebar").style.width = "250px";
@@ -15,7 +17,7 @@
   }
   </script>
 </head>
-<body style="background-color: #1c1d1d;">
+<body style="background-color: #2c2b2b;">
   <div class="about-section">
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -36,25 +38,21 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="/static/aditya.png" alt="Aditya" style="width:100%">
+            <img src="/static/aditya.jpg" alt="Aditya" style="width:100%">
             <div class="container">
-              <h2>Aditya</h2>
+              <h2>Aditya Saxena</h2>
               <p class="title">Back-End Devloper</p>
-              <p>I made the about us section</p>
-              <p>adityaarchie1234@gmail.com</p>
-              <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
+              <p><a href="mailto:adityaarchie1234@gmail.com" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
             </div>
           </div>
         </div>
       
         <div class="column">
           <div class="card">
-            <img src="/static/nandini.png" alt="Nanadini" style="width:100%">
+            <img src="/static/nandini.jpg" alt="Nanadini" style="width:100%">
             <div class="container">
               <h2>Nanadini Singh</h2>
               <p class="title">Front End Devloper</p>
-              <p>Gadhi</p>
-              <p>nandinisingh1803@gmail.com</p>
               <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
             </div>
           </div>
@@ -62,12 +60,10 @@
       
         <div class="column">
           <div class="card">
-            <img src="/static/ishank.png" alt="Ishank" style="width:100%">
+            <img src="/static/monke.jpg" alt="Ishank" style="width:100%">
             <div class="container">
               <h2>Ishank Giri</h2>
               <p class="title">Designer</p>
-              <p>Paper deta ha bas</p>
-              <p>john@example.com</p>
               <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
             </div>
           </div>
@@ -75,12 +71,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/static/piyush.png" alt="piyush" style="width:100%">
+          <img src="/static/piyush.jpg" alt="piyush" style="width:100%">
           <div class="container">
             <h2>Piyush Chandra</h2>
             <p class="title">JS</p>
-            <p>PEE pEE poo</p>
-            <p>pius@example.com</p>
             <p><a href="mailto:piyush.chandra2013@gmail.com" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
           </div>
         </div>
@@ -88,17 +82,22 @@
     </div>
     <div class="column">
         <div class="card">
-          <img src="/static/monke.jpg" alt="devansh" style="width:100%">
+          <img src="/static/devansh.jpg" alt="devansh" style="width:100%">
           <div class="container">
             <h2>Devansh Chauhan</h2>
             <p class="title">monke</p>
-            <p>Certified Monke</p>
-            <p>monke@example.com</p>
-            <p><button class="button">Contact</button></p>
+            <p><a href="mailto:devanshchauhan19990@gmail.com" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a>  </p>
           </div>
         </div>
       </div>
     </div>    
-      
+  </div>
+  <div class="column">
+    <div class="card">
+      </div>
+    </div>
+  </div>
+</div>   
+
 </body>
 </html>
