--- a/templates/research.html
+++ b/templates/research.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/static/css/research.css">
+<link rel="stylesheet" href="/static/css/sidebar.css">
 </head>
 <body>
   <div id="mySidebar" class="sidebar">
