error page.html added

--- a/templates/NITECE.html
+++ b/templates/NITECE.html
@@ -5225,10 +5225,10 @@
                                         <td>Communication,Image Processing, Signal Processing</td>
                                         
                                         
-                                        <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                        <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                         
                                         
-                                        <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                        <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                         <tr><td>Dr. Dibyendu Ghoshal</td>
 
 
@@ -5353,10 +5353,10 @@
                                           <td>Antenna, Microwave Engg., Wireless Communication, Smart Antenna</td>
                                           
                                           
-                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                           
                                           
-                                          <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                          <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                           <tr><td>Dr. Tamasi Moyra (Panua)</td>
                                           
                                           
@@ -5369,10 +5369,10 @@
                                           <td>Communication Engineering, Microwave Circuits and Antennas, Electromagnetic Metamaterials , Analog and Digital circuits and devices etc.</td>
                                           
                                           
-                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                           
                                           
-                                          <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                          <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                           <tr><td>Dr. Mitra Barun Sarkar</td>
                                           
                                           
@@ -5385,10 +5385,10 @@
                                           <td>RF and Micro Wave Engg., Wireless Communication,Nano Electronics, Semiconductor and Opto Electronic devices</td>
                                           
                                           
-                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                           
                                           
-                                          <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                          <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                           <tr><td>Dr. Priyanka Choudhury</td>
                                           
                                           
@@ -5465,10 +5465,10 @@
                                           <td>Optics (Non-linear Optics).</td>
                                           
                                           
-                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                           
                                           
-                                          <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                          <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
                                           <tr><td>Mr. Shiladitya Chakraborty</td>
                                           
                                           
@@ -5481,10 +5481,10 @@
                                           <td>Digital Electronics,Basic Electronics.</td>
                                           
                                           
-                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                                          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                                           
                                           
-                                          <a href="NA" target="_blank">Publication</a><p></p></div></td></tr>
+                                          <a href="Errorpage.html" target="_blank">Publication</a><p></p></div></td></tr>
 
                                           <tr><td>Dr. Vasantha M.H</td>
 
