--- a/static/css/professorlist.css
+++ b/static/css/professorlist.css
@@ -15,22 +15,23 @@ body {
   position: relative;
 }
 .input-search{
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 200px;
   border-style: none;
+  border: 3px solid #00B4CC;
   padding: 10px;
   font-size: 18px;
   letter-spacing: 2px;
   outline: none;
-  border-radius: 25px;
+  border-radius: 5px 0 0 5px;
   /* transition: all .5s ease-in-out; */
   /* background-color: #22a6b3; */
-  padding-right: 40px;
+  /* padding-left: 40px; */
   /* color:#fff; */
 }
 .input-search::placeholder{
   /* color:rgba(255,255,255,.5); */
-  font-size: 18px;
+  font-size: 12px;
   letter-spacing: 2px;
   font-weight: 100;
 }
@@ -57,12 +58,21 @@ body {
   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 .input-search:focus{
-  width: 300px;
+  /* width: 300px;
   border-radius: 0px;
   background-color: transparent;
-  /* border-bottom:1px solid rgba(255,255,255,.5); */
-  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2); */
+  color: #185875;
+
 }
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 h1 {
   font-size:3em; 
   font-weight: 300;
