--- a/templates/NITmech.html
+++ b/templates/NITmech.html
@@ -30,11 +30,14 @@
     <button class="openbtn" onclick="openNav()">☰</button>
   </div>
         <h1 style="color: gold; font-size:xx-large;">Professor List (IITs)<br>Computer Science and engineering</h1>
+        <div class="wrap"></div>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
         <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in Professor Name">
         <input type="text" id="myInput2" class="input-search" onkeyup="myFunction2()" placeholder="Search Interests" title="Type Interests ">
         <input type="text" id="myInput3" class="input-search" onkeyup="myFunction3()" placeholder="Search by College Name" title="Type College Name ">
+        
+        </div> 
       </div>
         <table id="myTable"class="container">
             <thead>
