--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -28,22 +28,23 @@ body {
   position: relative;
 }
 .input-search{
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 200px;
   border-style: none;
+  border: 3px solid #00B4CC;
   padding: 10px;
   font-size: 18px;
   letter-spacing: 2px;
   outline: none;
-  border-radius: 25px;
-  transition: all .5s ease-in-out;
-  background-color: #22a6b3;
-  padding-right: 40px;
-  color:#fff;
+  border-radius: 5px 0 0 5px;
+  /* transition: all .5s ease-in-out; */
+  /* background-color: #22a6b3; */
+  /* padding-left: 40px; */
+  /* color:#fff; */
 }
 .input-search::placeholder{
-  color:rgba(255,255,255,.5);
-  font-size: 18px;
+  /* color:rgba(255,255,255,.5); */
+  font-size: 12px;
   letter-spacing: 2px;
   font-weight: 100;
 }
@@ -58,7 +59,7 @@ body {
   border-radius: 50%;
   position: absolute;
   right: 0px;
-  color:#ffffff ;
+  /* color:#ffffff ; */
   background-color:transparent;
   pointer-events: painted;  
 }
@@ -66,15 +67,23 @@ body {
   width: 300px;
   border-radius: 0px;
   background-color: transparent;
-  border-bottom:1px solid rgba(255,255,255,.5);
+  /* border-bottom:1px solid rgba(255,255,255,.5); */
   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 .input-search:focus{
-  width: 300px;
+  /* width: 300px;
   border-radius: 0px;
   background-color: transparent;
-  border-bottom:1px solid rgba(255,255,255,.5);
-  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2); */
+  color: #185875;
+
+}
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 h1 {
   font-size:3em; 
@@ -252,11 +261,14 @@ h2 a {
 <body>
     <h1><span class="blue"></span> <span class="yellow">Professor List (Alphabetical)</pan></h1>
         <h2> Fields related to Computer Science and engineering</h2>
+        <div class="wrap"></div>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
         <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in Professor Name">
         <input type="text" id="myInput2" class="input-search" onkeyup="myFunction2()" placeholder="Search Interests" title="Type Interests ">
         <input type="text" id="myInput3" class="input-search" onkeyup="myFunction3()" placeholder="Search by College Name" title="Type College Name ">
+        
+        </div> 
       </div>
 
 
