--- a/templates/nitcse.html
+++ b/templates/nitcse.html
@@ -33,12 +33,15 @@
   }
   </script>
     <h1 style="color: gold; font-size:xx-large;">Professors List<br>Computer Science Engineering</h1>
-        <div class="search-box">
-          <button class="btn-search"><i class="fas fa-search"></i></button>
-        <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in Professor Name">
-        <input type="text" id="myInput2" class="input-search" onkeyup="myFunction2()" placeholder="Search Interests" title="Type Interests ">
-        <input type="text" id="myInput3" class="input-search" onkeyup="myFunction3()" placeholder="Search by College Name" title="Type College Name ">
-      </div>
+    <div class="wrap"></div>
+    <div class="search-box">
+      <button class="btn-search"><i class="fas fa-search"></i></button>
+    <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in Professor Name">
+    <input type="text" id="myInput2" class="input-search" onkeyup="myFunction2()" placeholder="Search Interests" title="Type Interests ">
+    <input type="text" id="myInput3" class="input-search" onkeyup="myFunction3()" placeholder="Search by College Name" title="Type College Name ">
+    
+    </div> 
+  </div>
 
 
         
