added iits nit dropdown

--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -45,7 +45,11 @@
                   <th><h1 style="text-align:center; color: #bfbec0;">Name</h1></th>
                   <th><h1 style="text-align:center"> <div class="dropdown"><button class="droptable">College</button>
                     <svg viewBox='0 0 140 140' width='20' height='15' xmlns='http://www.w3.org/2000/svg'><g><path d='m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z' fill='white'/></g></svg>
-                  <div class="dropdown-content"><a href="nitcse.html" target="_blank">NITs</a></div></div></h1></th>
+                  <div class="dropdown-content"><a href="nitcse.html" target="_blank">NITs</a></div><div class="dropdown-content"><a href="IIITCSE.HTML" target="_blank">IIITs</a></div></div></h1>
+                
+                
+                
+                  </th>
                   <th><h1 style="text-align:center; color: #bfbec0;">Branch</h1></th>
                   <th><h1 style="text-align:center; color: #bfbec0;">Interests</h1></th>
                   <th><h1 style="text-align:center; color: #bfbec0;">Links</h1></th>
