--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
     <title>
-        Hello Mf
+        EEE
     </title>
+    <link rel="stylesheet" href="/static/css/professorlist.css">
+    <script>
+     function openNav() {
+       document.getElementById("mySidebar").style.width = "250px";
+       document.getElementById("main").style.marginLeft = "250px";
+     }
+     
+     function closeNav() {
+       document.getElementById("mySidebar").style.width = "0";
+       document.getElementById("main").style.marginLeft= "0";
+     }
+     </script>
     <style>
         /*	
 	Side Navigation Menu V2, RWD
